<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!--App information-->
    <string name="app_name">TEACHomatic 3000</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">Die App für Lehrer</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--Navigation Drawer List-->
    <string name="menu_home">Home</string>
...
    <string name="menu_students">Students</string>
    <string name="menu_lehrstoff">Lehrstoff erstellen</string>
    <string name="menu_lehrstoffübersicht">Lehrstoffübersicht</string>

    <!--General-->
    <string name="save">Speichern</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="bearbeitungsdatum">Bearbeitungsdatum: </string>
    <string name="erstelldatum">Erstelldatum: </string>

    <!--Errors-->
    <string name="error_long_input">Eingabe zu lang.</string>
...
